# SequenceAnalysis

./: .coveragerc  .gitignore  .pylintrc  README.md  pyproject.toml  requirements.txt  tasks.py
dokumentaatio/: Käyttöohje.md  Määrittelydokumentti.md  Tuntikirjanpito.md  arkkitehtuuri.md  testaus.md
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko2/__MACOSX/: ._unicafe
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
src/: gc_content.py  gui.py  hiiri.txt  sequence.py  start.py  tasks.py
src/entities/: dotplot.py  gc_content.py  histogram.py
src/files/: kasvi.txt
src/plots/: dotplot_plot.py  histogram_plot.py
src/services/: dotplot_service.py  gc_service.py  histogram_service.py  validation_service.py
src/sovellus/: gc_content.py  sequence.py
src/tests/: ValidationService_test.py  dotplot_test.py  gc_content_test.py  histogram_test.py  lukutesti.txt  sequence_test.py  testitiedosto.txt  validation_service_test.py
src/tests/testfiles/: dotplotdata.txt
src/ui/: gui.py  gui2.py
